# comfy-kitchen

./: CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: build-wheels.yml  rocm.yml
comfy_kitchen/: __init__.py  constraints.py  registry.py  scaled_mm_v2.py
comfy_kitchen/backends/: _modulation.py
comfy_kitchen/backends/cuda/: CMakeLists.txt  __init__.py  dlpack_bindings.cpp
comfy_kitchen/backends/cuda/ops/: apply_rope.cu  awq_w4a16.cu  convrot_w4a4.cu  cublas_gemm_nvfp4.cu  cutlass_gemm_int8.cu  int8_linear.cu  per_tensor_quantize.cu  quantize_nvfp4.cu  scaled_mm_svdquant_w4a4.cu
comfy_kitchen/backends/eager/: __init__.py  adaln.py  convrot_w4a4.py  quantization.py  svdquant.py
comfy_kitchen/backends/hip/: CMakeLists.txt  __init__.py  dlpack_bindings.cpp  epilogue.h  fp8_utils.h  gemm_wmma.h  hadamard.h  mma.h  wmma_gfx12.h
comfy_kitchen/backends/hip/ops/: adaln.hip  apply_rope.hip  convrot_w4a4.hip  gemm_fp8.hip  gemm_int8.hip  gemv_awq.hip  per_tensor_fp8.hip  quantize_int8.hip  stochastic_round_fp8.hip  svdquant_w4a4.hip
comfy_kitchen/backends/rocm/: __init__.py
comfy_kitchen/backends/triton/: __init__.py  adaln.py  quantization.py  rope.py
comfy_kitchen/tensor/: __init__.py  awq_w4a16.py  base.py  convrot_w4a4.py  fp8.py  int8.py  nvfp4.py  svdquant_w4a4.py
samples/: nvfp4_linear.py
tests/: conftest.py  test_adaln.py  test_awq_w4a16.py  test_backends.py  test_constraints.py  test_convrot64_quantize.py  test_convrot_w4a4.py  test_dlpack.py  test_hip_dispatch.py  test_hip_wmma.py  test_int4_tensorwise.py  test_int8.py  test_integration.py  test_qdq.py  test_rocm_backend.py  test_rope.py  test_svdquant_w4a4.py  test_tensor.py  test_unflatten_dynamic_shapes.py
